3.4.0/openvidu-meet-vs-openvidu-platform/index.md
# OpenVidu Meet vs OpenVidu Platform

OpenVidu offers two different products:

- **OpenVidu Meet**: a complete, high-quality video calling service designed to be self-hosted. Ideal for teams, businesses and organizations that need a reliable, secure and customizable video conferencing solution running on their servers.
- **OpenVidu Platform**: a solution comprised of a self-hosted deployment and a set of SDKs and APIs that greatly simplifies the development of any type of real-time application.

Both OpenVidu Meet and OpenVidu Platform provide **production-grade performance, scalability, fault-tolerance and observability**. What product should you choose?

- Give [**OpenVidu Meet**](https://openvidu.io/3.4.0/meet/index.md) a try if your use case falls under the category of "video conferencing application": e-learning, telehealth, team collaboration, customer support, etc. Don't mistake the simplicity for a lack of possibilities: OpenVidu Meet offers branding customizations and many features out-of-the-box, such as screen-sharing, recording, advanced chat, virtual backgrounds, and more coming soon: broadcasting, E2E encryption, AI agents...
- Choose [**OpenVidu Platform**](https://openvidu.io/3.4.0/docs/index.md) if you really need total control and flexibility to build your own custom real-time app, either from scratch or integrating OpenVidu Platform into your existing app. OpenVidu Platform provides low-level WebRTC SDKs for any language, and full control over features like audio/video/data streaming, media ingestion, telephony and AI integrations.

|                                                   |                                                          |                                                              |
| ------------------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------------ |
| Self-hosted                                       |                                                          |                                                              |
| AWS & Azure templates                             |                                                          |                                                              |
| HQ real-time video                                |                                                          |                                                              |
| Performant, Scalable, Fault-Tolerant & Observable |                                                          |                                                              |
| Tutorials available                               |                                                          |                                                              |
| Customer support                                  |                                                          |                                                              |
| Ready-to-use application                          |                                                          |                                                              |
| No-code & Low-code options available              |                                                          |                                                              |
| Low-level SDKs                                    |                                                          |                                                              |
| High control over real-time features              |                                                          |                                                              |
| AI agents                                         |                                                          |                                                              |
| Models                                            | Rooms & Meetings                                         | Audio tracks & Video tracks                                  |
| Links                                             | [OpenVidu Meet](https://openvidu.io/3.4.0/meet/index.md) | [OpenVidu Platform](https://openvidu.io/3.4.0/docs/index.md) |
